# openchat

./: Cargo.toml  Dockerfile  README.md  fly.toml  recipe.json
.github/workflows/: fly.yml  test.yml
openchat/: fly.toml  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
openchat/src/: app.html
openchat/src/components/: chat.svelte
openchat/src/lib/: chat.ts  config.ts  message.ts
openchat/src/lib/assets/: info.txt
openchat/src/routes/: +layout.svelte  +page.svelte
openchat/src/routes/about/: +layout.svelte  +page.svelte
openchat/src/routes/privacy_policy/: +layout.svelte  +page.svelte
src/: chat.html  main.rs  model.rs
templates/: about.html  base.html  chat.html  core.html  index.html  msg.html  notification.html  privacy.html
