[package]
name = "openchat"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.5"
axum_static = "1.7.1"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
